# containerized-microservice-template

./: .buildinfo  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  cloudbuild.yaml  clouddeploy  containerized_microservice_template.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test  tests.behave.html  tests.behave.steps.html  tests.html
.doctrees/: containerized_microservice_template.doctree  environment.pickle  index.doctree  modules.doctree  tests.behave.doctree  tests.behave.steps.doctree  tests.doctree
.github/: pull_request_template.md
cloudbuild/: deploy.yaml  release.yaml
containerized_microservice_template/: app.py
docker/: Dockerfile
docs/: README.md  conf.py  developer_setup.md  index.rst  modules.rst  project_template.rst  testing_strategy.md  tests.bdd.rst  tests.bdd.steps.rst  tests.rst
guides/: auto_documentation.md  deployment_guide.md  developer_setup.md  first_steps.md  testing_strategy.md
k8s/: cert.yaml  deploy.yaml  ing.yaml  ns.yaml  svc.yaml
k8s/prod/: cert.yaml  ing.yaml
k8s/stage/: cert.yaml  ing.yaml
project_template/: __init__.py
scripts/: lint.sh  test.sh  update_baseline.sh
tests/bdd/: bdd_example.feature
tests/bdd/steps/: bdd_example_steps.py  parent_step.py
tests/behave/: app.feature
tests/behave/steps/: app.py
tests/resources/bdd_example_files/: example_file.json
tests/unit/: nothing.py
